# nuttx_conan_example

./: CMakeLists.txt  README.md  defconfig
conan/: conanfile.txt  profile.txt
src/: main.cc
